# crypto-morning-brief

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily.yml  korea-market.yml  us-market.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/models/: __init__.py  report.py
app/providers/: __init__.py  base.py  dummy.py  factory.py  mock_provider.py  public_provider.py  stock_provider.py
app/services/: notifier.py  report_service.py  report_writer.py  signal_engine.py
app/utils/: __init__.py  exchange_rate.py  logger.py
scripts/: run_daily_report.py
tests/: test_api.py  test_daily_report_api.py  test_market_provider.py  test_notifier.py  test_public_provider.py  test_report_api.py  test_report_writer.py  test_services.py  test_signal_api.py  test_signal_engine.py
